--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,1 +1,56 @@
 /* Your CSS here. */
+body {
+    background-color: white;
+    font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+  }
+
+  h1 {
+    color: #333;
+    font-size: 48px;
+    font-weight: 100;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+  }
+
+  .wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+  }
+
+  #CARD {
+    background-color: red;
+    border-radius: 2px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, .125);
+    padding: 20px;
+    max-width: 400px;
+    margin: auto;
+    text-align: center;
+  }
+
+  img {
+    display: block;
+    margin: 0 auto;
+    width: 10rem;
+    height: 10rem;
+    border-radius: 50%;
+  }
+
+  .abt-me p {
+    text-align: center;
+  }
+
+  .btns {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.btns button {
+  margin: 0 3px; 
+}
+
